--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.4",
     "@next/font": "13.1.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react-infinite-scroller": "^1.2.3",
+    "bootstrap": "^5.2.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
+    "graphql": "^16.6.0",
     "next": "13.1.2",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-infinite-scroller": "^1.2.6",
+    "typescript": "4.9.4",
+    "yarn": "^1.22.19"
   }
 }
